Added a Module Config option under Defaults for new domains to set the characters which random passwords are made up of.
Added buttons to enable or disable multiple resellers at once.
The MySQL default collation order for new databases can now be set on the database creation form, and in the MySQL section of a server template.
Added the Website Redirects page, for easily creating aliases from URL paths to directories, and redirects from URL paths to other websites.
Added a 'status' section to the 'info' API command, to get the collected status of servers like Apache and BIND.
When lowering a virtual server's disk quota below the current usage a warning is displayed asking the user if he really wants to do that.
Added a field to the backup form as the backup-domain API command to exclude some files from each domain's backup.
Separated the creation of a CSR from a self-signed certificate on the Manage SSL Certificate page.
---- Changes since 3.77 ----
FTP backup transfers are now re-tried up to 3 times, configurable on the Module Config page.
Updated the osTicket script installer to version 1.6.0, MoinMoin to 1.8.7, Magento to 1.4.0.1, Zikula to 1.2.2, Redmine to 0.9.3, phpScheduleIt to 1.2.12, ZenPhoto to 1.2.9, phpBB to 3.0.7, Typo3 to 4.3.2, Mantis to 1.2.0, CMS Made Simple to 1.6.7, and WordPress to 2.9.2.
Added a plan and domain-owner level restriction to prevent creation of virtual servers under other user's domains.
Added the --simple-multiline flag to the list-domains API command, for outputting most of the information about virtual servers significantly faster.
Backups can now be restored from uploaded file, using a new source option on the restore form.
Resellers now have access to the DNS records and Apache logs for virtual servers they own.
Added fields to the Website Options page for changing the Apache log file locations, and added flags to the modify-web API command to do the same thing.