@@ -1219,3 +1219,4 @@ Added the --simple-multiline flag to the list-domains API command, for outputtin
 Backups can now be restored from uploaded file, using a new source option on the restore form.
 Resellers now have access to the DNS records and Apache logs for virtual servers they own.
 Added fields to the Website Options page for changing the Apache log file locations, and added flags to the modify-web API command to do the same thing.
+Added the get-ssl API command to output information about a virtual server's SSL certificate.
